- added in-place validation error - partial view for validation error - fixed syntax error in service controller that break intelisense

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,6 +34,17 @@ table,th, td
 border: 1px solid black;
 }
 
+.top-bar
+{
+    background: #ffcccc;
+}
+
+.inplace-error
+{
+    color: red
+}
+
+
 .CSSTableGenerator {
 
 }
